# silicon-sandbox

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default.yaml
config/seatbelt-profiles/: base-deny.sb
launchd/: com.siliconsandbox.mcp.plist
orchestrator/orchestrator/: __init__.py  __main__.py  engine.py  memory.py  models.py  planner.py  router.py  server.py
sandbox-engine/: pyproject.toml
sandbox-engine/guest-agent/: desktop-init  guest-agent.py  guest-agent.sh  init
sandbox-engine/sandbox_engine/: __init__.py  microvm.py  models.py  native.py  seatbelt.py  server.py
sandbox-engine/vm-launcher/: Package.swift
sandbox-engine/vm-launcher/Sources/VMLauncher/: VMConfig.swift  main.swift
scripts/: build-desktop-image.py  install.sh  launch.sh  prepare-vm-images.sh  sandbox-run.sh  stop.sh  test-vm-boot.sh
src/sandbox_engine/: __main__.py  microvm.py  models.py  monitor.py  proxy.py  seatbelt.py
src/silicon_sandbox/: __init__.py  client.py
src/silicon_sandbox/config/seatbelt-profiles/: base-deny.sb
src/silicon_sandbox_mcp/: __init__.py  server.py
tests/: test_desktop_session.py  test_mcp_tools.py  test_microvm.py  test_monitor.py  test_orchestrator.py  test_proxy.py  test_sdk.py  test_seatbelt.py  test_server.py  test_ui.py
tools/browser-automation/: server.py
tools/code-interpreter/: server.py
tools/file-manager/: server.py
tools/sandbox-mcp/: server.py
tools/web-research/: server.py
ui/: index.html  server.py
