[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "silicon-sandbox"
version = "0.5.0"
description = "Apple Silicon native AI agent sandbox — three-tier isolated code execution with MCP server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Aaron Montgomery" }]
keywords = [
    "sandbox",
    "ai-agent",
    "code-execution",
    "apple-silicon",
    "mcp",
    "isolation",
    "seatbelt",
    "microvm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Emulators",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
all = ["mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/Euda1mon1a/silicon-sandbox"
Repository = "https://github.com/Euda1mon1a/silicon-sandbox"
Issues = "https://github.com/Euda1mon1a/silicon-sandbox/issues"

[project.scripts]
silicon-sandbox = "sandbox_engine.server:main"
silicon-sandbox-mcp = "silicon_sandbox_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
silicon_sandbox = ["config/*.yaml", "config/seatbelt-profiles/*.sb"]
