[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "silicon-sandbox-engine"
version = "0.1.0"
description = "Three-tier execution isolation engine for AI agents on Apple Silicon"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
sandbox-engine = "sandbox_engine.server:main"
